fix: rekomind img src to lowercase

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/Rekomind.png" alt="rekomind" />
+            <img src="images/rekomind.png" alt="rekomind" />
           </a>
         </div>
 
